--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "remark-html": "^15.0.1"
   },
   "devDependencies": {
+    "@types/node": "^17.0.19",
+    "@types/react": "^17.0.39",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.5.5"
   }
 }
